--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jackson.mapper.accept-case-insensitive-enums=true
